[tool.poetry]
name = "repl_nix_HtmlSmuggling"
version = "0.1.0"
description = ""
authors = ["trhacknon <jeremydiliotti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
colored = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
